tests/negative_pomidory/key_presses.pomidor

!!test_pomidor_PomidorDataFeedNoAngleKeysProvided!!
@feature csv_data3
@params  del, iw, prereq=, data=pageobjects/csv_data_source.csv
JIRA-13989
First, clicked on login_field #practice_menu_button page title
Then, click on #male_rb, seconds and make sure that #male_rb is selected.
and typed [[text-1]] in #phone_field. Then, typed <<FirstName>>
in #name_field and press #ARROW_LEFT and press #NUMPAD9 wait #0.2 seconds


@feature csv_data3
@params max, scroll=.2, del, prereq=, data=pageobjects/csv_data_source.csv
JIRA-13989
First, clicked on login_field #practice_menu_button page title
Then, click on #male_rb, seconds and make sure that #female_rb is selected.
and typed [[text-1]] in #phone_field. Then, typed <<FirstName>>
in #name_field and press #ARROW_LEFT and press #NUMPAD9 wait #0.2 seconds

